--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -3,192 +3,158 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Business Infinity — From episodic decisions to shared orchestration</title>
+  <title>Business Infinity — The Boardroom That Never Adjourns</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
   <!-- HERO -->
   <header class="hero">
     <div class="wrap hero-inner">
-      <h1>Stop managing around the seams</h1>
-      <p class="sub">Your ERP, MES, CRM, and spreadsheets aren’t the problem. The gap between them is. Business Infinity runs a persistent AI boardroom across those seams — so plans stop dying at hand‑off.</p>
+      <h1>Stop Managing the Gaps</h1>
+      <p class="sub">
+        The silent tax isn’t in your ERP, MES, CRM, or planning tools.  
+        It’s in the space between them.
+      </p>
       <div class="hero-cta">
-        <a href="#pilot" class="btn btn-primary">Design your zero‑regret pilot</a>
-        <a href="#risk" class="btn btn-ghost">See how we de‑risk it</a>
-      </div>
-      <div class="hero-metrics">
-        <div><span class="big" data-count="40">0</span><span class="label">% faster cross‑function decisions</span></div>
-        <div><span class="big" data-count="18">0</span><span class="label">pt SLA uplift on priority flows</span></div>
-        <div><span class="big" data-count="12">0</span><span class="label">% working capital released</span></div>
+        <a href="#threshold" class="btn btn-primary">Cross the Threshold</a>
+        <a href="#risk" class="btn btn-ghost">See How It Earns Trust</a>
       </div>
     </div>
   </header>
 
   <main>
-    <!-- WHERE ENTERPRISES BLEED -->
-    <section class="section pain reveal">
+
+    <!-- MANIFESTO INTRO -->
+    <section class="section reveal">
       <div class="wrap">
-        <h2>Where the enterprise bleeds (and why dashboards didn’t fix it)</h2>
-        <div class="grid-3">
-          <div class="card">
-            <h3>Decision latency tax</h3>
-            <p>Alignment takes weeks because each function optimizes its lane. By the time consensus lands, the window’s shut or the plan’s stale.</p>
-            <ul class="list">
-              <li><strong>Signal drift:</strong> Outdated inputs at approval time</li>
-              <li><strong>Meeting overhead:</strong> Decisions parked on calendars</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Plan-to-execution leak</h3>
-            <p>Great decks, weak hand‑offs. ERP/MES/CRM execute pieces; nobody owns the cross‑system causality end‑to‑end.</p>
-            <ul class="list">
-              <li><strong>Action friction:</strong> Tickets and orders lag the decision</li>
-              <li><strong>No ledger:</strong> Rationale and results are unrecoverable</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Local learning loop</h3>
-            <p>Wins don’t travel. Lessons go to wikis. The org keeps re‑paying to rediscover known truths.</p>
-            <ul class="list">
-              <li><strong>Reversal cost:</strong> Quiet rollback erases evidence</li>
-              <li><strong>Talent burn:</strong> Teams re‑solve solved problems</li>
-            </ul>
-          </div>
-        </div>
+        <p>
+          Every delayed hand‑off.  
+          Every re‑decision.  
+          Every plan that dies before the first action.  
+        </p>
+        <p>
+          Business Infinity closes that space forever.  
+          Not with another dashboard —  
+          with a <strong>boardroom that never adjourns</strong>.
+        </p>
       </div>
     </section>
 
-    <!-- WHAT CHANGES WITH BUSINESS INFINITY -->
-    <section class="section change reveal">
+    <!-- FROM LAG TO FLOW -->
+    <section class="section reveal">
       <div class="wrap">
-        <h2>What changes when the boardroom is persistent</h2>
+        <h2>From Lag to Flow</h2>
         <div class="grid-2">
           <div class="card">
-            <h3>Deliberate → Decide → Act — continuously</h3>
-            <p>Domain‑tuned CEO/CFO/COO/CRO/CHRO/CPO agents debate, quantify trade‑offs, and push guarded actions directly into ERP/MES/CRM — with approvals and rollback.</p>
-            <ul class="list">
-              <li><strong>Always‑on:</strong> No waiting for cadence meetings</li>
-              <li><strong>Traceable:</strong> Decisions, diffs, outcomes in one ledger</li>
-              <li><strong>Guarded:</strong> Dry‑runs, SoD, caps, canary, rollback</li>
-            </ul>
+            <h3>Today</h3>
+            <p>Every function optimises its lane. Decisions crawl toward consensus. By the time the convoy moves, the market has shifted.</p>
           </div>
           <div class="card emphasis">
-            <h3>From chain to constellation</h3>
-            <p>When suppliers, plants, logistics and channels all run Infinity, the network doesn’t align — it self‑aligns. Capacity and capital route where they matter now.</p>
-            <div class="proof-pills">
-              <span class="pill">Zero‑latency negotiation</span>
-              <span class="pill">Shared scenario sims</span>
-              <span class="pill">Crisis re‑routing</span>
-            </div>
+            <h3>Tomorrow</h3>
+            <ul class="list">
+              <li>Domain‑tuned CEO, CFO, COO, CRO, CHRO agents debating in real time.</li>
+              <li>Guarded actions instantly in ERP/MES/CRM.</li>
+              <li>Every trade‑off and outcome in a living ledger.</li>
+            </ul>
+            <p>Your enterprise doesn’t just act faster. It <strong>remembers faster</strong>.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- HARD LEVERS (P&L / BALANCE SHEET) -->
-    <section class="section levers reveal">
+    <!-- THREE IRREVERSIBLES -->
+    <section class="section reveal">
       <div class="wrap">
-        <h2>Hard levers you can feel on the P&L and balance sheet</h2>
+        <h2>Three Irreversibles</h2>
+        <ul class="list">
+          <li>A decision is only as good as the moment it’s made.</li>
+          <li>If learning doesn’t propagate, it wasn’t learning.</li>
+          <li>Strategy that stops at the org chart isn’t strategy — it’s theatre.</li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- NETWORK SHIFT -->
+    <section class="section reveal">
+      <div class="wrap">
+        <h2>The Network Shift</h2>
+        <p>
+          When your suppliers, plants, channels, and partners run Infinity:  
+          capacity reroutes to where it creates the most value now,  
+          capital flows with the same intelligence,  
+          and everyone sees the same “now” — acting without waiting for you to convene.
+        </p>
+        <p>This isn’t alignment. It’s <strong>self‑alignment at network scale</strong>.</p>
+      </div>
+    </section>
+
+    <!-- HARD LEVERS -->
+    <section class="section reveal">
+      <div class="wrap">
+        <h2>The Hard Levers</h2>
         <div class="grid-3">
           <div class="card kpi">
-            <h3>Revenue & margin</h3>
-            <p>Faster, better allocation decisions: mix, pricing, promotions, and channel fill with real constraint awareness.</p>
-            <div class="kpi-bar"><span style="--target:55%"></span></div>
-            <div class="kpi-note">Directional: throughput lift via latency + adherence</div>
+            <h3>Revenue & Margin</h3>
+            <p>Faster, better allocations in mix, pricing, and fill rate.</p>
           </div>
           <div class="card kpi">
-            <h3>Cost‑to‑serve</h3>
-            <p>Fewer expedites and escalations. Smoother plans reduce overtime, freight premiums, and fire‑drill waste.</p>
-            <div class="kpi-bar"><span style="--target:35%"></span></div>
-            <div class="kpi-note">Directional: variance reduction → lower waste</div>
+            <h3>Cost‑to‑Serve</h3>
+            <p>Fewer fire‑drills. Less expedite waste.</p>
           </div>
           <div class="card kpi">
-            <h3>Working capital</h3>
-            <p>Shorter cycle times and better adherence release cash from inventory and receivables without starving service levels.</p>
-            <div class="kpi-bar"><span style="--target:20%"></span></div>
-            <div class="kpi-note">Directional: WC relief tied to lead‑time compression</div>
+            <h3>Working Capital</h3>
+            <p>Shorter cycles, lighter inventories, released cash.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- TRUST & RISK -->
-    <section class="section risk reveal" id="risk">
+    <!-- RISK -->
+    <section class="section reveal" id="risk">
       <div class="wrap">
-        <h2>De‑risked by design — before we touch write‑backs</h2>
-        <div class="grid-2">
-          <div class="card">
-            <h3>Governance that holds</h3>
-            <ul class="list">
-              <li><strong>Charters:</strong> Powers, limits, escalation per agent</li>
-              <li><strong>SoD:</strong> Proposer ≠ approver ≠ executor beyond thresholds</li>
-              <li><strong>Policy gates:</strong> Financial/privacy/compliance checks at runtime</li>
-              <li><strong>Audit:</strong> Tamper‑evident decision ledger</li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Rollout without regrets</h3>
-            <ul class="list">
-              <li><strong>Read‑only first:</strong> Simulations and diffs against live data</li>
-              <li><strong>Guarded writes:</strong> Dry‑runs, approvals, caps, and rollback</li>
-              <li><strong>Blast‑radius control:</strong> Canary, scope bands, kill switch</li>
-              <li><strong>Observability:</strong> Every action traced end‑to‑end</li>
-            </ul>
-          </div>
-        </div>
+        <h2>Risk is a Design Variable</h2>
+        <p>Before Infinity ever writes back to your systems, it proves itself under:</p>
+        <ul class="list">
+          <li>Read‑only simulations.</li>
+          <li>Approvals, rollback, blast‑radius control.</li>
+          <li>Charter‑bound agents with explicit limits.</li>
+          <li>Full audit ledger.</li>
+        </ul>
+        <p>You don’t trust it into production — you <strong>watch it earn its way</strong>.</p>
       </div>
     </section>
 
-    <!-- PILOT OFFER -->
-    <section class="section pilot reveal" id="pilot">
+    <!-- THRESHOLD STEP -->
+    <section class="section reveal" id="threshold">
       <div class="wrap">
-        <h2>Your zero‑regret pilot</h2>
-        <div class="grid-3">
-          <div class="card">
-            <h3>Scope</h3>
-            <p>Pick one painful, measurable flow (e.g., order‑to‑cash in EMEA, a plant changeover window, or a supplier capacity lane).</p>
-          </div>
-          <div class="card">
-            <h3>Setup (2–4 weeks)</h3>
-            <p>Charters, read‑only connectors, ontology mapping, replayable sims, and a decision ledger visible to audit.</p>
-          </div>
-          <div class="card">
-            <h3>Proof (4–8 weeks)</h3>
-            <p>Run continuous deliberation with approvals; guarded writes where safe. Instrument deltas to cycle time, service, cost, and cash.</p>
-          </div>
-        </div>
+        <h2>Your Threshold Step</h2>
+        <p>One pilot flow. One measurable, high‑friction process:</p>
+        <ul class="list">
+          <li>Order‑to‑cash in EMEA</li>
+          <li>A single plant’s changeover cycle</li>
+          <li>A supplier capacity lane</li>
+        </ul>
+        <p>4–8 weeks. Continuous deliberation, guarded actions where safe, every delta measured in cycle time, service, cost, and cash.</p>
+        <p><strong>Cross this point, and you’ll never make another plan the old way.</strong></p>
+      </div>
+    </section>
+
+    <!-- INVITATION -->
+    <section class="section reveal">
+      <div class="wrap">
+        <blockquote>
+          You’ve already felt the drag. The question is whether you keep paying it.  
+          The future is already running — the invitation is to join it.
+        </blockquote>
         <div class="cta-center">
-          <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Schedule pilot design workshop</a>
+          <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Design Your Pilot</a>
         </div>
       </div>
     </section>
 
-    <!-- ROI SKETCH -->
-    <section class="section roi reveal">
-      <div class="wrap">
-        <h2>Sketch your ROI</h2>
-        <p class="muted">Directional only — we’ll tune with your baselines.</p>
-        <div class="grid-2">
-          <form class="card form" id="roiForm">
-            <div class="form-row"><label>Annual revenue</label><input type="number" id="rev" value="1200000000"/></div>
-            <div class="form-row"><label>Gross margin (%)</label><input type="number" id="gm" value="28"/></div>
-            <div class="form-row"><label>Decision latency reduction (%)</label><input type="number" id="latency" value="35"/></div>
-            <div class="form-row"><label>Plan adherence uplift (%)</label><input type="number" id="adherence" value="15"/></div>
-            <div class="form-row"><label>Working capital reduction (%)</label><input type="number" id="wc" value="8"/></div>
-            <button type="button" id="calcBtn" class="btn btn-primary">Calculate</button>
-          </form>
-          <div class="card results">
-            <div class="result"><div class="label">Throughput lift</div><div class="value" id="throughput">$0</div></div>
-            <div class="result"><div class="label">Gross profit impact</div><div class="value" id="profit">$0</div></div>
-            <div class="result"><div class="label">Working capital freed</div><div class="value" id="working">$0</div></div>
-            <p class="small muted">Model: throughput ≈ latency + 0.5×adherence; WC baseline ≈ 20% revenue.</p>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
 
-  <!-- FOOTER -->
   <footer class="footer">
     <div class="wrap foot">
       <div>
