--- a/enterprise/index.html
+++ b/enterprise/index.html
@@ -1,158 +1,195 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Business Infinity — The Boardroom That Never Adjourns</title>
+  <title>Business Infinity — The boardroom that never adjourns</title>
+  <meta name="description" content="From episodic decisions to shared orchestration. Cross the threshold with a persistent AI boardroom that earns trust in production." />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Using system fonts for performance and reliability -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Scroll progress -->
+  <div id="progress" aria-hidden="true"></div>
 
-  <!-- HERO -->
+  <!-- Decorative orbs for subtle parallax -->
+  <div class="orbs" aria-hidden="true">
+    <span class="orb orb-1"></span>
+    <span class="orb orb-2"></span>
+    <span class="orb orb-3"></span>
+  </div>
+
   <header class="hero">
     <div class="wrap hero-inner">
-      <h1>Stop Managing the Gaps</h1>
-      <p class="sub">
-        The silent tax isn’t in your ERP, MES, CRM, or planning tools.  
+      <h1 class="headline reveal" data-reveal="up">Stop managing the gaps</h1>
+      <p class="sub lead reveal" data-reveal="fade" data-delay="100">
+        The silent tax isn’t in your ERP, MES, CRM, or planning tools. <br />
         It’s in the space between them.
       </p>
-      <div class="hero-cta">
-        <a href="#threshold" class="btn btn-primary">Cross the Threshold</a>
-        <a href="#risk" class="btn btn-ghost">See How It Earns Trust</a>
+      <div class="hero-cta reveal" data-reveal="up" data-delay="200">
+        <a href="#threshold" class="btn btn-primary">Cross the threshold</a>
+        <a href="#risk" class="btn btn-quiet">See how it earns trust</a>
       </div>
     </div>
   </header>
 
-  <main>
-
-    <!-- MANIFESTO INTRO -->
-    <section class="section reveal">
+  <main id="main-content" tabindex="-1">
+    <!-- Manifesto intro -->
+    <section class="section section-intro">
       <div class="wrap">
-        <p>
-          Every delayed hand‑off.  
-          Every re‑decision.  
-          Every plan that dies before the first action.  
-        </p>
-        <p>
-          Business Infinity closes that space forever.  
-          Not with another dashboard —  
-          with a <strong>boardroom that never adjourns</strong>.
+        <div class="beats reveal" data-reveal="up">
+          <p class="beat">Every delayed hand‑off.</p>
+          <p class="beat">Every re‑decision.</p>
+          <p class="beat">Every plan that dies before the first action.</p>
+        </div>
+        <p class="lead reveal" data-reveal="fade" data-delay="150">
+          Business Infinity closes that space forever. Not with another dashboard —
+          with a <span class="accent">boardroom that never adjourns</span>.
         </p>
       </div>
     </section>
 
-    <!-- FROM LAG TO FLOW -->
-    <section class="section reveal">
+    <!-- From Lag to Flow -->
+    <section class="section section-flow">
       <div class="wrap">
-        <h2>From Lag to Flow</h2>
-        <div class="grid-2">
-          <div class="card">
-            <h3>Today</h3>
-            <p>Every function optimises its lane. Decisions crawl toward consensus. By the time the convoy moves, the market has shifted.</p>
-          </div>
-          <div class="card emphasis">
-            <h3>Tomorrow</h3>
+        <h2 class="h2 reveal" data-reveal="up">From lag to flow</h2>
+        <div class="grid grid-2">
+          <article class="card reveal" data-reveal="up">
+            <h3 class="eyebrow">Today</h3>
+            <p>
+              Every function optimises its lane. Decisions crawl toward consensus. By the time the convoy moves,
+              the market has shifted.
+            </p>
+          </article>
+          <article class="card emphasis reveal" data-reveal="up" data-delay="120">
+            <h3 class="eyebrow">Tomorrow</h3>
             <ul class="list">
-              <li>Domain‑tuned CEO, CFO, COO, CRO, CHRO agents debating in real time.</li>
-              <li>Guarded actions instantly in ERP/MES/CRM.</li>
-              <li>Every trade‑off and outcome in a living ledger.</li>
+              <li><span class="li-lead">Domain agents:</span> CEO, CFO, COO, CRO, CHRO debating in real time.</li>
+              <li><span class="li-lead">Guarded actions:</span> Instant writes into ERP/MES/CRM with rollback.</li>
+              <li><span class="li-lead">Living ledger:</span> Every trade‑off, decision, and outcome captured.</li>
             </ul>
-            <p>Your enterprise doesn’t just act faster. It <strong>remembers faster</strong>.</p>
-          </div>
+            <p>Your enterprise doesn’t just act faster. It <span class="accent">remembers faster</span>.</p>
+          </article>
         </div>
       </div>
     </section>
 
-    <!-- THREE IRREVERSIBLES -->
-    <section class="section reveal">
+    <!-- Three Irreversibles -->
+    <section class="section section-tenets">
       <div class="wrap">
-        <h2>Three Irreversibles</h2>
-        <ul class="list">
-          <li>A decision is only as good as the moment it’s made.</li>
-          <li>If learning doesn’t propagate, it wasn’t learning.</li>
-          <li>Strategy that stops at the org chart isn’t strategy — it’s theatre.</li>
+        <h2 class="h2 reveal" data-reveal="up">Three irreversibles</h2>
+        <ul class="tenets reveal" data-reveal="fade">
+          <li>
+            <span class="tenet-index">01</span>
+            <span class="tenet-text">A decision is only as good as the moment it’s made.</span>
+          </li>
+          <li>
+            <span class="tenet-index">02</span>
+            <span class="tenet-text">If learning doesn’t propagate, it wasn’t learning.</span>
+          </li>
+          <li>
+            <span class="tenet-index">03</span>
+            <span class="tenet-text">Strategy that stops at the org chart isn’t strategy — it’s theatre.</span>
+          </li>
         </ul>
       </div>
     </section>
 
-    <!-- NETWORK SHIFT -->
-    <section class="section reveal">
+    <!-- Network Shift -->
+    <section class="section section-network">
       <div class="wrap">
-        <h2>The Network Shift</h2>
-        <p>
-          When your suppliers, plants, channels, and partners run Infinity:  
-          capacity reroutes to where it creates the most value now,  
-          capital flows with the same intelligence,  
-          and everyone sees the same “now” — acting without waiting for you to convene.
+        <h2 class="h2 reveal" data-reveal="up">The network shift</h2>
+        <p class="lead reveal" data-reveal="fade">
+          When your suppliers, plants, channels, and partners run Infinity: capacity reroutes to where it creates the most value now,
+          capital flows with the same intelligence, and everyone sees the same “now” — acting without waiting for you to convene.
         </p>
-        <p>This isn’t alignment. It’s <strong>self‑alignment at network scale</strong>.</p>
+        <div class="pills reveal" data-reveal="up" data-delay="100">
+          <span class="pill">Zero‑latency negotiation</span>
+          <span class="pill">Shared scenario sims</span>
+          <span class="pill">Crisis re‑routing</span>
+        </div>
+        <p class="subtle reveal" data-reveal="fade" data-delay="150">This isn’t alignment. It’s self‑alignment at network scale.</p>
       </div>
     </section>
 
-    <!-- HARD LEVERS -->
-    <section class="section reveal">
+    <!-- Hard Levers -->
+    <section class="section section-levers">
       <div class="wrap">
-        <h2>The Hard Levers</h2>
-        <div class="grid-3">
-          <div class="card kpi">
-            <h3>Revenue & Margin</h3>
+        <h2 class="h2 reveal" data-reveal="up">The hard levers</h2>
+        <div class="grid grid-3">
+          <article class="card kpi reveal" data-reveal="up">
+            <h3 class="eyebrow">Revenue & margin</h3>
             <p>Faster, better allocations in mix, pricing, and fill rate.</p>
-          </div>
-          <div class="card kpi">
-            <h3>Cost‑to‑Serve</h3>
+          </article>
+          <article class="card kpi reveal" data-reveal="up" data-delay="100">
+            <h3 class="eyebrow">Cost‑to‑serve</h3>
             <p>Fewer fire‑drills. Less expedite waste.</p>
-          </div>
-          <div class="card kpi">
-            <h3>Working Capital</h3>
+          </article>
+          <article class="card kpi reveal" data-reveal="up" data-delay="200">
+            <h3 class="eyebrow">Working capital</h3>
             <p>Shorter cycles, lighter inventories, released cash.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Risk -->
+    <section class="section section-risk" id="risk">
+      <div class="wrap">
+        <h2 class="h2 reveal" data-reveal="up">Risk is a design variable</h2>
+        <p class="reveal" data-reveal="fade">Before Infinity ever writes back to your systems, it proves itself under:</p>
+        <div class="grid grid-2">
+          <ul class="list card reveal" data-reveal="up">
+            <li><span class="li-lead">Read‑only:</span> Simulations and diffs on live data.</li>
+            <li><span class="li-lead">Approvals:</span> Segregation of duties and explicit limits.</li>
+            <li><span class="li-lead">Rollback:</span> Canary, caps, kill switch.</li>
+            <li><span class="li-lead">Audit:</span> Tamper‑evident decision ledger.</li>
+          </ul>
+          <div class="card callout reveal" data-reveal="up" data-delay="120">
+            <p>You don’t trust it into production — you <span class="accent">watch it earn its way</span>.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- RISK -->
-    <section class="section reveal" id="risk">
+    <!-- Threshold -->
+    <section class="section section-threshold" id="threshold">
       <div class="wrap">
-        <h2>Risk is a Design Variable</h2>
-        <p>Before Infinity ever writes back to your systems, it proves itself under:</p>
-        <ul class="list">
-          <li>Read‑only simulations.</li>
-          <li>Approvals, rollback, blast‑radius control.</li>
-          <li>Charter‑bound agents with explicit limits.</li>
-          <li>Full audit ledger.</li>
-        </ul>
-        <p>You don’t trust it into production — you <strong>watch it earn its way</strong>.</p>
-      </div>
-    </section>
-
-    <!-- THRESHOLD STEP -->
-    <section class="section reveal" id="threshold">
-      <div class="wrap">
-        <h2>Your Threshold Step</h2>
-        <p>One pilot flow. One measurable, high‑friction process:</p>
-        <ul class="list">
-          <li>Order‑to‑cash in EMEA</li>
-          <li>A single plant’s changeover cycle</li>
-          <li>A supplier capacity lane</li>
-        </ul>
-        <p>4–8 weeks. Continuous deliberation, guarded actions where safe, every delta measured in cycle time, service, cost, and cash.</p>
-        <p><strong>Cross this point, and you’ll never make another plan the old way.</strong></p>
-      </div>
-    </section>
-
-    <!-- INVITATION -->
-    <section class="section reveal">
-      <div class="wrap">
-        <blockquote>
-          You’ve already felt the drag. The question is whether you keep paying it.  
-          The future is already running — the invitation is to join it.
-        </blockquote>
-        <div class="cta-center">
-          <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Design Your Pilot</a>
+        <h2 class="h2 reveal" data-reveal="up">Your threshold step</h2>
+        <p class="reveal" data-reveal="fade">One pilot flow. One measurable, high‑friction process:</p>
+        <div class="grid grid-3">
+          <div class="card reveal" data-reveal="up">
+            <h3 class="eyebrow">Order‑to‑cash</h3>
+            <p>Start with a region or priority segment; measure cycle time, DSO, and SLA lift.</p>
+          </div>
+          <div class="card reveal" data-reveal="up" data-delay="100">
+            <h3 class="eyebrow">Plant changeover</h3>
+            <p>Stabilise windows; reduce variance; protect throughput without overtime spikes.</p>
+          </div>
+          <div class="card reveal" data-reveal="up" data-delay="200">
+            <h3 class="eyebrow">Supplier lane</h3>
+            <p>Capacity and lead‑time realism; fewer expedites; shared sims for what‑ifs.</p>
+          </div>
+        </div>
+        <p class="subtle reveal" data-reveal="fade" data-delay="150">4–8 weeks. Continuous deliberation, guarded actions, measured deltas in time, service, cost, and cash.</p>
+        <div class="cta-center reveal" data-reveal="up" data-delay="200">
+          <a href="mailto:enterprise@businessinfinity.ai" class="btn btn-primary btn-lg">Design your pilot</a>
         </div>
       </div>
     </section>
 
+    <!-- Invitation -->
+    <section class="section section-invite">
+      <div class="wrap">
+        <blockquote class="quote reveal" data-reveal="fade">
+          You’ve already felt the drag. The question is whether you keep paying it. The future is already running — the invitation is to join it.
+        </blockquote>
+        <div class="cta-center reveal" data-reveal="up" data-delay="120">
+          <a href="#main-content" class="btn btn-quiet">Back to top</a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="footer">
@@ -161,10 +198,20 @@
         <strong>Business Infinity</strong>
         <div class="muted">Networked intelligence. Shared orchestration.</div>
       </div>
+      <nav class="foot-nav" aria-label="Footer">
+        <a href="#risk">Trust</a>
+        <a href="#threshold">Pilot</a>
+      </nav>
       <div class="muted">© 2025 Business Infinity</div>
     </div>
   </footer>
 
   <script src="scripts.js"></script>
+  <noscript>
+    <style>
+      .reveal { opacity: 1 !important; transform: none !important; }
+      #progress { display: none !important; }
+    </style>
+  </noscript>
 </body>
 </html>
