--- a/startup2/index.html
+++ b/startup2/index.html
@@ -2,69 +2,142 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Business Infinity – Startup Pitch</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Business Infinity — Scale your judgement as fast as your product</title>
+  <meta name="description" content="For startups ready to play at enterprise strategic depth without losing speed. Cross the threshold to a persistent AI boardroom." />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-overlay">
-      <h1>Business Infinity</h1>
-      <p class="tagline">Your AI Boardroom for Startup‑Speed Strategy</p>
-      <a href="#cta" class="btn-primary">Book Your Demo</a>
+
+<header class="hero">
+  <div class="wrap hero-inner">
+    <h1 class="headline reveal">Your runway deserves more than guesswork</h1>
+    <p class="sub lead reveal">
+      Burn, churn, pivots — you already know the odds. The hidden killer isn’t just capital; it’s **decision drag**.
+    </p>
+    <div class="hero-cta reveal">
+      <a href="#threshold" class="btn btn-primary">Cross the threshold</a>
+      <a href="#risk" class="btn btn-quiet">See how we de‑risk it</a>
     </div>
-  </header>
+  </div>
+</header>
 
-  <main class="content">
-    <section class="intro reveal">
-      <h2>Why Startups Need Business Infinity</h2>
-      <p>In a startup, speed is life. But speed without strategic depth risks burnout and missed opportunities. Business Infinity gives you the <strong>decision power of an enterprise C‑suite</strong> — without slowing you down.</p>
-    </section>
+<main>
 
-    <section class="benefits reveal">
-      <h2>What You Get</h2>
-      <div class="grid-3">
-        <div class="card">
-          <h3>Persistent AI C‑Suite</h3>
-          <p>Domain‑tuned CEO, CFO, and COO agents that never sleep — continuously tracking goals and trade‑offs.</p>
-        </div>
-        <div class="card">
-          <h3>Seamless Tool Integration</h3>
-          <p>Connect your CRM, project board, and analytics so decisions flow directly into action.</p>
-        </div>
-        <div class="card">
-          <h3>Investor‑Ready Moves</h3>
-          <p>Every decision is ledgered and explainable — making due diligence painless and confidence high.</p>
-        </div>
+<section class="section">
+  <div class="wrap">
+    <div class="beats reveal">
+      <p class="beat">Every late hire.</p>
+      <p class="beat">Every lost lead.</p>
+      <p class="beat">Every change you saw coming but couldn’t act on in time.</p>
+    </div>
+    <p class="lead reveal">
+      Business Infinity closes that gap. Not with advice. Not with a dashboard.  
+      With a <span class="accent">boardroom that never adjourns</span> — tuned to your startup.
+    </p>
+  </div>
+</section>
+
+<section class="section">
+  <div class="wrap">
+    <h2 class="h2 reveal">From reaction to orchestration</h2>
+    <div class="grid grid-2">
+      <div class="card reveal">
+        <h3 class="eyebrow">Today</h3>
+        <p>Fire‑drill sprints, gut‑feel trade‑offs, investor decks written on fumes.</p>
       </div>
-    </section>
+      <div class="card emphasis reveal">
+        <h3 class="eyebrow">Tomorrow</h3>
+        <ul class="list">
+          <li><span class="li-lead">Persistent AI C‑suite:</span> CEO, CFO, COO agents watching every key metric.</li>
+          <li><span class="li-lead">Action in hours:</span> Go from “we should” to “it’s live” before the week flips.</li>
+          <li><span class="li-lead">Investor‑ready ledger:</span> Every move, rationale, and result in one place.</li>
+        </ul>
+        <p>You don’t just move faster — you <span class="accent">compound faster</span>.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
-    <section class="curve reveal">
-      <h2>The Compounding Advantage</h2>
-      <p>Every decision you make with Business Infinity doesn’t just move your startup forward — it upgrades your boardroom’s intelligence for the next one. And when you connect to our network, you tap into shared intelligence from others like you.</p>
-      <table>
-        <thead>
-          <tr><th>Startups Onboarded</th><th>Network Capability Growth*</th></tr>
-        </thead>
-        <tbody>
-          <tr><td data-count="10">0</td><td data-count="100">0</td></tr>
-          <tr><td data-count="100">0</td><td data-count="5000">0</td></tr>
-        </tbody>
-      </table>
-      <p class="note">*Illustrative; actual learning acceleration varies</p>
-    </section>
+<section class="section">
+  <div class="wrap">
+    <h2 class="h2 reveal">Three truths for founders</h2>
+    <ul class="tenets reveal">
+      <li><span class="tenet-index">01</span><span class="tenet-text">Capital is wasted as easily by bad focus as by burn.</span></li>
+      <li><span class="tenet-index">02</span><span class="tenet-text">Every cycle without learning compounds risk.</span></li>
+      <li><span class="tenet-index">03</span><span class="tenet-text">The pitch that wins is backed by provable decisions.</span></li>
+    </ul>
+  </div>
+</section>
 
-    <section class="cta-section reveal" id="cta">
-      <h2>Bring Infinity Into Your Boardroom</h2>
-      <p>Skip the growing pains. Scale your decision‑making as fast as you scale your product.</p>
-      <a href="mailto:founders@businessinfinity.ai" class="btn-primary pulse">Book Your Demo</a>
-    </section>
-  </main>
+<section class="section">
+  <div class="wrap">
+    <h2 class="h2 reveal">The network you join</h2>
+    <p class="lead reveal">
+      Every Infinity‑run startup feeds into a commons: anonymised patterns, tested playbooks, battle‑proven evaluators.
+      Your boardroom learns from theirs; theirs learns from yours.
+    </p>
+    <div class="pills reveal">
+      <span class="pill">Shared funding plays</span>
+      <span class="pill">Proven GTM moves</span>
+      <span class="pill">Hiring that sticks</span>
+    </div>
+  </div>
+</section>
 
-  <footer>
-    <p>&copy; 2025 Business Infinity – Built for Founders</p>
-  </footer>
+<section class="section" id="risk">
+  <div class="wrap">
+    <h2 class="h2 reveal">Zero‑risk adoption</h2>
+    <ul class="list card reveal">
+      <li><span class="li-lead">Read‑only first:</span> Simulate actions on your live data.</li>
+      <li><span class="li-lead">Guardrails:</span> Spend caps, experiment limits, rollback anytime.</li>
+      <li><span class="li-lead">Audit:</span> Tamper‑evident log for every decision.</li>
+    </ul>
+    <p class="subtle reveal">You don’t gamble the runway — you prove the lift before you commit.</p>
+  </div>
+</section>
 
-  <script src="scripts.js"></script>
+<section class="section" id="threshold">
+  <div class="wrap">
+    <h2 class="h2 reveal">Your threshold step</h2>
+    <p class="reveal">Pick one pain to kill in 4–6 weeks:</p>
+    <div class="grid grid-3">
+      <div class="card reveal">
+        <h3 class="eyebrow">Lead‑to‑close</h3>
+        <p>Compress your sales cycle; raise win rates without raising spend.</p>
+      </div>
+      <div class="card reveal">
+        <h3 class="eyebrow">Cash burn</h3>
+        <p>Cut waste in tooling, ops, and campaigns without starving growth.</p>
+      </div>
+      <div class="card reveal">
+        <h3 class="eyebrow">Product‑market fit signals</h3>
+        <p>Instrument every test; scale only what wins with data.</p>
+      </div>
+    </div>
+    <div class="cta-center reveal">
+      <a href="mailto:founders@businessinfinity.ai" class="btn btn-primary btn-lg">Design your pilot</a>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="wrap">
+    <blockquote class="quote reveal">
+      You built this to change your market. Don’t run it on yesterday’s decision tempo.
+    </blockquote>
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="wrap foot">
+    <div><strong>Business Infinity</strong> <div class="muted">Networked intelligence. Shared orchestration.</div></div>
+    <div class="muted">© 2025 Business Infinity</div>
+  </div>
+</footer>
+
+<script src="scripts.js"></script>
 </body>
 </html>
