--- a/features2/index.html
+++ b/features2/index.html
@@ -1,48 +1,125 @@
-<section class="hero">
-  <div class="hero-content">
-    <h1>Decisions Land While Others Are Still Scheduling</h1>
-    <p>Your network self‑routes around volatility. Every win you make becomes the baseline for every partner you trust.</p>
-    <a href="#vignette" class="cta-primary">Step Inside</a>
-  </div>
-</section>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, viewport-fit=cover"
+  />
+  <title>Business Infinity — Agentic Boardroom</title>
+  <meta name="description" content="Decisions land while others are still scheduling. Your network self-routes around volatility. Every win becomes the baseline for every partner you trust." />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="hero">
+    <div class="wrap reveal in-view">
+      <div class="meta">
+        <span class="tag">Agentic boardroom</span>
+        <span class="tag">Live across ERP • MES • CRM • SaaS</span>
+      </div>
+      <h1>Decisions land while others are still scheduling</h1>
+      <p>Your network self-routes around volatility. Every win you make becomes the baseline for every partner you trust.</p>
+      <div class="hero-cta">
+        <a class="btn" href="#vignette">Step inside</a>
+        <a class="btn ghost" href="#network">See the lift</a>
+      </div>
+    </div>
+  </header>
 
-<section id="vignette" class="day-in-life">
-  <h2>How Your Day Could Run</h2>
-  <p>08:00 — Forecasts update before your first coffee.  
-     10:30 — A supplier’s delay reroutes itself to keep your launch on track.  
-     15:00 — Your COO agent closes the loop on next quarter’s plays.</p>
-</section>
+  <main>
+    <!-- Vignette -->
+    <section id="vignette" class="wrap">
+      <div class="panel reveal">
+        <h2>How your day could run</h2>
+        <p class="muted">A lived slice of work when the boardroom is always-on.</p>
+        <div class="timeline" id="timeline">
+          <div class="tick"><time>08:00</time><div class="desc">Forecasts refresh before your first coffee — ops, sales, and finance align on one moving picture.<span class="badge" aria-hidden="true">Sync complete</span></div></div>
+          <div class="tick"><time>10:30</time><div class="desc">A supplier slips. The network reroutes capacity and protects your launch without overtime.</div></div>
+          <div class="tick"><time>13:15</time><div class="desc">Customer signals spike in a new segment; marketing and product spin up a joint play in minutes.</div></div>
+          <div class="tick"><time>15:00</time><div class="desc">Your COO agent closes the loop on next quarter’s moves — with CFO, CRO, and CTO agents in lockstep.</div></div>
+          <div class="tick"><time>18:00</time><div class="desc">Every decision becomes a reusable playbook, raising the floor for you — and for partners you trust.</div></div>
+        </div>
+      </div>
+    </section>
 
-<section class="possibility-composer">
-  <h2>Shape What Happens Next</h2>
-  <div class="options">
-    <button>Outpace Market Shifts</button>
-    <button>Cut Decision Latency</button>
-    <button>Unlock Partner Plays</button>
-  </div>
-  <p class="live-statement">Together, we’ll outpace market shifts before they appear on the radar.</p>
-</section>
+    <!-- Composer -->
+    <section class="wrap">
+      <div class="panel composer reveal" id="composer">
+        <h2>Shape what happens next</h2>
+        <div class="choices">
+          <button class="chip" aria-pressed="false" data-text="We’ll outpace market shifts before they appear on the radar.">Outpace market shifts</button>
+          <button class="chip" aria-pressed="false" data-text="We’ll cut decision latency from weeks to hours — and keep it there.">Cut decision latency</button>
+          <button class="chip" aria-pressed="false" data-text="We’ll unlock partner plays that neither of us could ship alone.">Unlock partner plays</button>
+          <button class="chip" aria-pressed="false" data-text="We’ll expand margin without touching overtime.">Expand margin</button>
+          <button class="chip" aria-pressed="false" data-text="We’ll turn every win into a playbook the whole network can run.">Turn wins into playbooks</button>
+        </div>
+        <p class="live"><span class="pulse" aria-hidden="true"></span><span class="copy" id="liveCopy">Together, we’ll outpace market shifts before they appear on the radar.</span></p>
+      </div>
+    </section>
 
-<section class="agent-voices">
-  <h2>Your C‑Suite, Upgraded</h2>
-  <div class="agent">
-    <strong>COO:</strong> “I’ll have you out‑producing forecasts without touching overtime.”
-  </div>
-  <div class="agent">
-    <strong>CFO:</strong> “Every investment routes itself toward your long‑term lift.”
-  </div>
-</section>
+    <!-- Agents -->
+    <section class="wrap">
+      <div class="reveal">
+        <h2>Your C‑suite, upgraded</h2>
+        <p class="muted">Domain‑tuned agents that speak in outcomes, not dashboards.</p>
+      </div>
+      <div class="agents reveal" id="agents">
+        <article class="agent"><strong>COO</strong><q>I'll have you out‑producing forecasts without touching overtime.</q></article>
+        <article class="agent"><strong>CFO</strong><q>Every investment routes itself toward compounding lift — not just this quarter’s optics.</q></article>
+        <article class="agent"><strong>CRO</strong><q>Your pipeline moves as one organism; we ship the right offer at the right moment, every time.</q></article>
+        <article class="agent"><strong>CTO</strong><q>Systems talk. Signals unify. We de‑risk change with reversible, well‑lit paths.</q></article>
+        <article class="agent"><strong>CHRO</strong><q>Teams get clarity, not meetings. The work fits people — and they win more often.</q></article>
+      </div>
+    </section>
 
-<section class="network-effect">
-  <h2>Strength in Every Connection</h2>
-  <div class="network-visual">
-    <!-- animated constellation or graph placeholder -->
-  </div>
-  <p>Each new node multiplies the plays — and the lift — for everyone on the grid.</p>
-</section>
+    <!-- Network -->
+    <section id="network" class="wrap">
+      <div class="panel network reveal">
+        <h2>Strength in every connection</h2>
+        <p class="muted">Each new node multiplies the plays — and the lift — for everyone on the grid.</p>
+        <div class="canvas-wrap">
+          <canvas id="constellation" aria-label="Network constellation visualization"></canvas>
+          <div class="overlay-metrics" id="metrics">Nodes: 24 • Plays: 276 • Lift: 3.3×</div>
+        </div>
+        <div class="controls">
+          <label for="nodes">Network size</label>
+          <input id="nodes" type="range" min="8" max="120" value="24" />
+          <span class="muted" id="rangeVal">24</span>
+          <span class="tag">Live</span>
+        </div>
+      </div>
+    </section>
 
-<section class="invitation">
-  <h2>Your Chair Is Open</h2>
-  <p>Let’s take the first decision together.</p>
-  <a href="#contact" class="cta-primary">Join the Boardroom</a>
-</section>
+    <!-- Invitation -->
+    <section class="wrap">
+      <div class="panel invite reveal">
+        <h2>Your chair is open</h2>
+        <p>Let’s take the first decision together.</p>
+        <div>
+          <a class="btn" href="#contact">Join the boardroom</a>
+          <a class="btn ghost" href="#contact">See a live run</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="wrap">
+      <div class="panel reveal">
+        <h2>Start the first decision</h2>
+        <p class="muted">Leave a note. We’ll return with a concrete move, not a calendar link.</p>
+        <form id="contactForm">
+          <div style="display:grid; gap:12px; margin-top:12px">
+            <input name="name" required placeholder="Your name" />
+            <input name="email" required type="email" placeholder="Work email" />
+            <textarea name="note" rows="4" placeholder="What move should we ship first?"></textarea>
+            <button class="btn" type="submit">Send a signal</button>
+            <p class="muted" id="formMsg" role="status"></p>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <script src="scripts.js"></script>
+</body>
+</html>
