--- a/features2/index.html
+++ b/features2/index.html
@@ -6,11 +6,12 @@
     name="viewport"
     content="width=device-width, initial-scale=1, viewport-fit=cover"
   />
-  <title>Business Infinity — Agentic Boardroom</title>
-  <meta name="description" content="Decisions land while others are still scheduling. Your network self-routes around volatility. Every win becomes the baseline for every partner you trust." />
+  <title>Business Infinity — Features</title>
+  <meta name="description" content="Agentic boardroom features, told through lived outcomes. Always-on decisions, domain-tuned C-suite agents, and a network that compounds lift." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <!-- Hero -->
   <header class="hero">
     <div class="wrap reveal in-view">
       <div class="meta">
@@ -27,17 +28,63 @@
   </header>
 
   <main>
+    <!-- Features Strip (Option A) -->
+    <section class="features-strip wrap">
+      <div class="feature-card">
+        <h3>Always‑On Boardroom</h3>
+        <p>Forecasts, ops, sales, and finance already aligned before your first sip of coffee.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Network Constellation</h3>
+        <p>One partner’s breakthrough play ripples instantly to every trusted connection.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Domain‑Tuned C‑Suite Agents</h3>
+        <p>Your COO cuts decision cycles to hours; your CFO routes every move toward compounding lift.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Live Goal Composer</h3>
+        <p>Click once to rewrite the shared mission — see it adapt and propagate in real time.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Playbook Memory</h3>
+        <p>Each win is saved as a ready‑to‑run move that raises the floor for the whole grid.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Frictionless Signal</h3>
+        <p>Send your first move instantly — we respond with action, not a scheduling link.</p>
+      </div>
+    </section>
+
     <!-- Vignette -->
     <section id="vignette" class="wrap">
       <div class="panel reveal">
         <h2>How your day could run</h2>
         <p class="muted">A lived slice of work when the boardroom is always-on.</p>
         <div class="timeline" id="timeline">
-          <div class="tick"><time>08:00</time><div class="desc">Forecasts refresh before your first coffee — ops, sales, and finance align on one moving picture.<span class="badge" aria-hidden="true">Sync complete</span></div></div>
-          <div class="tick"><time>10:30</time><div class="desc">A supplier slips. The network reroutes capacity and protects your launch without overtime.</div></div>
-          <div class="tick"><time>13:15</time><div class="desc">Customer signals spike in a new segment; marketing and product spin up a joint play in minutes.</div></div>
-          <div class="tick"><time>15:00</time><div class="desc">Your COO agent closes the loop on next quarter’s moves — with CFO, CRO, and CTO agents in lockstep.</div></div>
-          <div class="tick"><time>18:00</time><div class="desc">Every decision becomes a reusable playbook, raising the floor for you — and for partners you trust.</div></div>
+          <div class="tick">
+            <time>08:00</time>
+            <div class="desc">
+              Forecasts refresh before your first coffee — ops, sales, and finance align on one moving picture.
+              <span class="badge" aria-hidden="true">Sync complete</span>
+            </div>
+          </div>
+          <div class="tick">
+            <time>10:30</time>
+            <div class="desc">A supplier slips. The network reroutes capacity and protects your launch without overtime.</div>
+          </div>
+          <div class="tick">
+            <time>13:15</time>
+            <div class="desc">Customer signals spike in a new segment; marketing and product spin up a joint play in minutes.</div>
+          </div>
+          <div class="tick">
+            <time>15:00</time>
+            <div class="desc">Your COO agent closes the loop on next quarter’s moves — with CFO, CRO, and CTO agents in lockstep.</div>
+          </div>
+          <div class="tick">
+            <time>18:00</time>
+            <div class="desc">Every decision becomes a reusable playbook, raising the floor for you — and for partners you trust.</div>
+          </div>
         </div>
       </div>
     </section>
@@ -108,7 +155,7 @@
         <h2>Start the first decision</h2>
         <p class="muted">Leave a note. We’ll return with a concrete move, not a calendar link.</p>
         <form id="contactForm">
-          <div style="display:grid; gap:12px; margin-top:12px">
+          <div class="form-grid">
             <input name="name" required placeholder="Your name" />
             <input name="email" required type="email" placeholder="Work email" />
             <textarea name="note" rows="4" placeholder="What move should we ship first?"></textarea>
