--- a/features2/index.html
+++ b/features2/index.html
@@ -1,172 +1,263 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, viewport-fit=cover"
-  />
-  <title>Business Infinity — Features</title>
-  <meta name="description" content="Agentic boardroom features, told through lived outcomes. Always-on decisions, domain-tuned C-suite agents, and a network that compounds lift." />
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <!-- Hero -->
-  <header class="hero">
-    <div class="wrap reveal in-view">
-      <div class="meta">
-        <span class="tag">Agentic boardroom</span>
-        <span class="tag">Live across ERP • MES • CRM • SaaS</span>
-      </div>
-      <h1>Decisions land while others are still scheduling</h1>
-      <p>Your network self-routes around volatility. Every win you make becomes the baseline for every partner you trust.</p>
-      <div class="hero-cta">
-        <a class="btn" href="#vignette">Step inside</a>
-        <a class="btn ghost" href="#network">See the lift</a>
-      </div>
-    </div>
-  </header>
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Business Infinity — Features</title>
+    <meta name="description" content="Features that feel like strategy in motion. Persistent AI boardroom, domain-tuned C‑suite agents, and live systems integration." />
+    <meta name="theme-color" content="#f9fafb" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <a class="skip-link" href="#main">Skip to content</a>
 
-  <main>
-    <!-- Features Strip (Option A) -->
-    <section class="features-strip wrap">
-      <div class="feature-card">
-        <h3>Always‑On Boardroom</h3>
-        <p>Forecasts, ops, sales, and finance already aligned before your first sip of coffee.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Network Constellation</h3>
-        <p>One partner’s breakthrough play ripples instantly to every trusted connection.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Domain‑Tuned C‑Suite Agents</h3>
-        <p>Your COO cuts decision cycles to hours; your CFO routes every move toward compounding lift.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Live Goal Composer</h3>
-        <p>Click once to rewrite the shared mission — see it adapt and propagate in real time.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Playbook Memory</h3>
-        <p>Each win is saved as a ready‑to‑run move that raises the floor for the whole grid.</p>
-      </div>
-      <div class="feature-card">
-        <h3>Frictionless Signal</h3>
-        <p>Send your first move instantly — we respond with action, not a scheduling link.</p>
-      </div>
-    </section>
+    <header class="site-header" role="banner">
+      <div class="container header-inner">
+        <a class="brand" href="#" aria-label="Business Infinity home">
+          <span class="brand-mark" aria-hidden="true">∞</span>
+          <span class="brand-name">Business Infinity</span>
+        </a>
 
-    <!-- Vignette -->
-    <section id="vignette" class="wrap">
-      <div class="panel reveal">
-        <h2>How your day could run</h2>
-        <p class="muted">A lived slice of work when the boardroom is always-on.</p>
-        <div class="timeline" id="timeline">
-          <div class="tick">
-            <time>08:00</time>
-            <div class="desc">
-              Forecasts refresh before your first coffee — ops, sales, and finance align on one moving picture.
-              <span class="badge" aria-hidden="true">Sync complete</span>
+        <nav class="site-nav" aria-label="Primary">
+          <button class="nav-toggle" aria-controls="primary-menu" aria-expanded="false">
+            <span class="nav-toggle-box" aria-hidden="true"></span>
+            <span class="nav-toggle-label">Menu</span>
+          </button>
+
+          <ul id="primary-menu" class="menu">
+            <li><a href="#">Overview</a></li>
+            <li><a href="#" aria-current="page">Features</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Docs</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+
+          <button class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">
+            <svg width="20" height="20" viewBox="0 0 24 24" aria-hidden="true">
+              <path fill="currentColor" d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+            </svg>
+          </button>
+        </nav>
+      </div>
+    </header>
+
+    <main id="main">
+      <!-- Hero -->
+      <section class="hero section">
+        <div class="container grid-2">
+          <div class="hero-copy reveal">
+            <h1 class="h1">Features that feel like strategy in motion</h1>
+            <p class="lede">
+              A persistent AI boardroom with domain‑tuned C‑suite agents, integrated across ERP/MES/CRM/SaaS — turning every decision into compounding momentum.
+            </p>
+            <div class="cta-row">
+              <a class="btn btn-primary" href="#">Request a demo</a>
+              <a class="btn btn-ghost" href="#">Explore ASI Saga</a>
             </div>
           </div>
-          <div class="tick">
-            <time>10:30</time>
-            <div class="desc">A supplier slips. The network reroutes capacity and protects your launch without overtime.</div>
-          </div>
-          <div class="tick">
-            <time>13:15</time>
-            <div class="desc">Customer signals spike in a new segment; marketing and product spin up a joint play in minutes.</div>
-          </div>
-          <div class="tick">
-            <time>15:00</time>
-            <div class="desc">Your COO agent closes the loop on next quarter’s moves — with CFO, CRO, and CTO agents in lockstep.</div>
-          </div>
-          <div class="tick">
-            <time>18:00</time>
-            <div class="desc">Every decision becomes a reusable playbook, raising the floor for you — and for partners you trust.</div>
+          <div class="hero-art reveal" aria-hidden="true">
+            <div class="canvas">
+              <div class="node n1"></div>
+              <div class="node n2"></div>
+              <div class="node n3"></div>
+              <div class="node n4"></div>
+              <div class="node n5"></div>
+              <svg class="links" viewBox="0 0 400 300" preserveAspectRatio="none">
+                <path d="M60 220 C130 160, 140 100, 210 80" />
+                <path d="M210 80 C260 100, 300 160, 340 200" />
+                <path d="M100 120 C150 140, 210 80, 260 120" />
+                <path d="M60 220 C120 240, 200 200, 340 200" />
+              </svg>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Composer -->
-    <section class="wrap">
-      <div class="panel composer reveal" id="composer">
-        <h2>Shape what happens next</h2>
-        <div class="choices">
-          <button class="chip" aria-pressed="false" data-text="We’ll outpace market shifts before they appear on the radar.">Outpace market shifts</button>
-          <button class="chip" aria-pressed="false" data-text="We’ll cut decision latency from weeks to hours — and keep it there.">Cut decision latency</button>
-          <button class="chip" aria-pressed="false" data-text="We’ll unlock partner plays that neither of us could ship alone.">Unlock partner plays</button>
-          <button class="chip" aria-pressed="false" data-text="We’ll expand margin without touching overtime.">Expand margin</button>
-          <button class="chip" aria-pressed="false" data-text="We’ll turn every win into a playbook the whole network can run.">Turn wins into playbooks</button>
-        </div>
-        <p class="live"><span class="pulse" aria-hidden="true"></span><span class="copy" id="liveCopy">Together, we’ll outpace market shifts before they appear on the radar.</span></p>
-      </div>
-    </section>
-
-    <!-- Agents -->
-    <section class="wrap">
-      <div class="reveal">
-        <h2>Your C‑suite, upgraded</h2>
-        <p class="muted">Domain‑tuned agents that speak in outcomes, not dashboards.</p>
-      </div>
-      <div class="agents reveal" id="agents">
-        <article class="agent"><strong>COO</strong><q>I'll have you out‑producing forecasts without touching overtime.</q></article>
-        <article class="agent"><strong>CFO</strong><q>Every investment routes itself toward compounding lift — not just this quarter’s optics.</q></article>
-        <article class="agent"><strong>CRO</strong><q>Your pipeline moves as one organism; we ship the right offer at the right moment, every time.</q></article>
-        <article class="agent"><strong>CTO</strong><q>Systems talk. Signals unify. We de‑risk change with reversible, well‑lit paths.</q></article>
-        <article class="agent"><strong>CHRO</strong><q>Teams get clarity, not meetings. The work fits people — and they win more often.</q></article>
-      </div>
-    </section>
-
-    <!-- Network -->
-    <section id="network" class="wrap">
-      <div class="panel network reveal">
-        <h2>Strength in every connection</h2>
-        <p class="muted">Each new node multiplies the plays — and the lift — for everyone on the grid.</p>
-        <div class="canvas-wrap">
-          <canvas id="constellation" aria-label="Network constellation visualization"></canvas>
-          <div class="overlay-metrics" id="metrics">Nodes: 24 • Plays: 276 • Lift: 3.3×</div>
-        </div>
-        <div class="controls">
-          <label for="nodes">Network size</label>
-          <input id="nodes" type="range" min="8" max="120" value="24" />
-          <span class="muted" id="rangeVal">24</span>
-          <span class="tag">Live</span>
-        </div>
-      </div>
-    </section>
-
-    <!-- Invitation -->
-    <section class="wrap">
-      <div class="panel invite reveal">
-        <h2>Your chair is open</h2>
-        <p>Let’s take the first decision together.</p>
-        <div>
-          <a class="btn" href="#contact">Join the boardroom</a>
-          <a class="btn ghost" href="#contact">See a live run</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="wrap">
-      <div class="panel reveal">
-        <h2>Start the first decision</h2>
-        <p class="muted">Leave a note. We’ll return with a concrete move, not a calendar link.</p>
-        <form id="contactForm">
-          <div class="form-grid">
-            <input name="name" required placeholder="Your name" />
-            <input name="email" required type="email" placeholder="Work email" />
-            <textarea name="note" rows="4" placeholder="What move should we ship first?"></textarea>
-            <button class="btn" type="submit">Send a signal</button>
-            <p class="muted" id="formMsg" role="status"></p>
+      <!-- Value props -->
+      <section class="value-band section">
+        <div class="container value-grid">
+          <div class="value-item reveal">
+            <div class="icon" aria-hidden="true">🧭</div>
+            <h3 class="h5">Always‑on strategy</h3>
+            <p>Deliberation that never sleeps — agents keep context, surface trade‑offs, and prepare options before you ask.</p>
           </div>
-        </form>
-      </div>
-    </section>
-  </main>
+          <div class="value-item reveal">
+            <div class="icon" aria-hidden="true">🔗</div>
+            <h3 class="h5">Live systems integration</h3>
+            <p>ERP/MES/CRM/SaaS integration means actions and insights land where work happens.</p>
+          </div>
+          <div class="value-item reveal">
+            <div class="icon" aria-hidden="true">📈</div>
+            <h3 class="h5">Compounding learning</h3>
+            <p>Every sprint sharpens the next — knowledge loops capture outcomes, not just notes.</p>
+          </div>
+          <div class="value-item reveal">
+            <div class="icon" aria-hidden="true">🛡️</div>
+            <h3 class="h5">Governance built‑in</h3>
+            <p>Transparent trails, clear roles, and reversible actions by design.</p>
+          </div>
+        </div>
+      </section>
 
-  <script src="scripts.js"></script>
-</body>
+      <!-- Features grid -->
+      <section class="features section">
+        <div class="container">
+          <header class="section-header reveal">
+            <h2 class="h2">What you can do</h2>
+            <p class="muted">Outcome‑first capabilities that turn complexity into clarity.</p>
+          </header>
+
+          <div class="feature-grid">
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">🏛️</div>
+                <h3 class="h4">Persistent AI boardroom</h3>
+              </div>
+              <p>Keep a living agenda, open questions, and ready‑to‑run options across product, go‑to‑market, and operations.</p>
+              <ul class="bullets">
+                <li><strong>Continuity:</strong> Agents remember decisions, constraints, and rationale.</li>
+                <li><strong>Velocity:</strong> Pre‑drafted briefs, roadmaps, and scenario trees.</li>
+                <li><strong>Focus:</strong> Escalations only when your judgment is needed.</li>
+              </ul>
+            </article>
+
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">🧠</div>
+                <h3 class="h4">Domain‑tuned C‑suite agents</h3>
+              </div>
+              <p>CFO to CPO — each agent speaks the language of your domain and systems.</p>
+              <ul class="bullets">
+                <li><strong>Alignment:</strong> Objectives map to KPIs and data sources.</li>
+                <li><strong>Depth:</strong> Tactics grounded in real constraints, not abstractions.</li>
+                <li><strong>Dialogue:</strong> Structured debate, not monologues.</li>
+              </ul>
+            </article>
+
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">🔌</div>
+                <h3 class="h4">Live systems integration</h3>
+              </div>
+              <p>Read and write into ERP/MES/CRM/SaaS safely, with guardrails and approvals.</p>
+              <ul class="bullets">
+                <li><strong>Bridged:</strong> Data where it’s needed, when it’s needed.</li>
+                <li><strong>Safe:</strong> Policy‑aware actions and dry‑run previews.</li>
+                <li><strong>Observable:</strong> Health checks and latency budgets.</li>
+              </ul>
+            </article>
+
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">♻️</div>
+                <h3 class="h4">Self‑improving loops</h3>
+              </div>
+              <p>Retrospectives that actually change behavior — agents learn from outcomes, not just plans.</p>
+              <ul class="bullets">
+                <li><strong>Memory:</strong> Patterns, anti‑patterns, and playbooks evolve.</li>
+                <li><strong>Signals:</strong> Weak signals flagged before they become issues.</li>
+                <li><strong>Uplift:</strong> Re‑usable assets across teams and contexts.</li>
+              </ul>
+            </article>
+
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">🎬</div>
+                <h3 class="h4">Cinematic storytelling</h3>
+              </div>
+              <p>From analysis to narrative — investor‑grade decks, interactive demos, and director’s scripts.</p>
+              <ul class="bullets">
+                <li><strong>Clarity:</strong> Complex systems explained simply.</li>
+                <li><strong>Emotion:</strong> Audiences feel the stakes and the path.</li>
+                <li><strong>Momentum:</strong> Every artifact moves a decision forward.</li>
+              </ul>
+            </article>
+
+            <article class="feature-card reveal">
+              <div class="fc-head">
+                <div class="fc-icon" aria-hidden="true">📜</div>
+                <h3 class="h4">Governance and audit</h3>
+              </div>
+              <p>Clear roles, reversible actions, and traceable decisions without friction.</p>
+              <ul class="bullets">
+                <li><strong>Control:</strong> Approval chains and policy packs.</li>
+                <li><strong>Trace:</strong> Time‑stamped, human‑readable logs.</li>
+                <li><strong>Trust:</strong> Shared source of truth across teams.</li>
+              </ul>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- How it works -->
+      <section class="how section">
+        <div class="container">
+          <header class="section-header reveal">
+            <h2 class="h2">How it works</h2>
+            <p class="muted">A simple loop, relentlessly executed.</p>
+          </header>
+          <div class="how-grid">
+            <div class="how-step reveal">
+              <div class="step-num">01</div>
+              <h3 class="h5">Connect</h3>
+              <p>Link your ERP/MES/CRM/SaaS and define objectives. Governance packs set the rails.</p>
+            </div>
+            <div class="how-step reveal">
+              <div class="step-num">02</div>
+              <h3 class="h5">Deliberate</h3>
+              <p>Agents debate trade‑offs and propose options with live data pulls and dry‑runs.</p>
+            </div>
+            <div class="how-step reveal">
+              <div class="step-num">03</div>
+              <h3 class="h5">Act & learn</h3>
+              <p>Ship with confidence. Outcomes feed playbooks that compound across teams.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonial -->
+      <section class="quote section">
+        <div class="container">
+          <figure class="quote-card reveal">
+            <blockquote>
+              “It’s like walking into a board meeting where the homework is already done, and the deck writes itself.”
+            </blockquote>
+            <figcaption>— Lighthouse founder, ASI Saga</figcaption>
+          </figure>
+        </div>
+      </section>
+
+      <!-- CTA -->
+      <section class="cta section">
+        <div class="container cta-inner reveal">
+          <div>
+            <h2 class="h3">See your strategy move</h2>
+            <p class="muted">Get a guided walkthrough with your real context and systems.</p>
+          </div>
+          <a class="btn btn-primary" href="#">Request a demo</a>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <div class="footer-brand">
+          <span class="brand-mark" aria-hidden="true">∞</span>
+          <span class="brand-name">Business Infinity</span>
+        </div>
+        <nav aria-label="Footer">
+          <ul class="footer-menu">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Security</a></li>
+            <li><a href="#">Status</a></li>
+          </ul>
+        </nav>
+        <p class="muted small">© <span id="year"></span> Business Infinity. All rights reserved.</p>
+      </div>
+    </footer>
+
+    <script src="app.js" defer></script>
+  </body>
 </html>
