--- a/project.html
+++ b/project.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ASI Saga GitHub Project Issues (Gantt)</title>
-  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt/dist/frappe-gantt.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css">
   <style>
     body { font-family: Arial, sans-serif; background: #f7f7f7; margin: 0; padding: 2em; }
     h1 { color: #333; }
@@ -15,7 +15,7 @@
 <body>
   <h1>ASI Saga GitHub Project Issues (Gantt Chart)</h1>
   <div id="gantt"><div id="loading">Loading issues...</div></div>
-  <script src="https://unpkg.com/frappe-gantt/dist/frappe-gantt.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.min.js"></script>
   <script>
     const OWNER = 'ASISaga';
     const REPOS = ['BusinessInfinity', 'businessinfinity.asisaga.com'];
