--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Choose a role or omit to show all -->
-  <boardroom-dashboard manifest-url="/api/boardroom/manifest" role="CFO"></boardroom-dashboard>
+  <boardroom-dashboard manifest-url="/api/boardroom/manifest.json" role="CFO"></boardroom-dashboard>
 
   <script type="module" src="dashboard.js"></script>
 </body>
